# modal-proof-checker

./: .gitignore  Main.hs  modal-proof-checker.cabal
Checker/: Formula.hs  Modal.hs  PrettyPrint.hs  Proof.hs
