-- vim: set textwidth=80:
name: modal-proof-checker
version: 0.0.1
synopsis: A program for checking and pretty-printing proops in propositional
          modal logic.
license: PublicDomain
author: Anton Golov
build-type: Simple
cabal-version: >= 1.22

executable main
  main-is: Main.hs
  build-depends: base, mtl, pretty, containers, lens, free
  hs-source-dirs: .
  ghc-options: -Wall
  default-language: Haskell2010
  default-extensions: DeriveFunctor, DeriveFoldable, DeriveTraversable,
    FlexibleContexts, TupleSections
